--- a/src/app/components/main/components/Modal/modal.css
+++ b/src/app/components/main/components/Modal/modal.css
@@ -1,42 +1,46 @@
 .overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 10;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
 }
 
 .modal {
-    padding: 16px;
-    box-shadow: 0 0 0 0.5px #585858;
-    border-radius: 8px;
-    background-color: #000;
-    width: 375px;
+  padding: 16px;
+  box-shadow: 0 0 0 0.5px #585858;
+  border-radius: 8px;
+  background-color: #000;
+  overflow: auto;
+  margin: 0 8px;
+  scrollbar-color: #585858 #000;
 
-    @media(min-width: 768px){
-       width: 512px;
-    }
-    @meida(min-width: 1024px){
-        width: 1440px;
-        height: auto;
-    }
-   
+  @media (min-width: 435px) {
+    width: 100%;
+    height: 100vh;
+    margin: 24px;
+  }
 }
 
 .close-button-container {
-    position: absolute;
-    top: 20px;
-    right: 20px;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+
+  @media (min-width: 435px) {
+    top: 30px;
+    right: 40px;
+  }
 }
 
 .close-button {
-    width: 24px;
-    height: 24px;
-    border-radius: 50%;
-    border: 1px solid #fff;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  border: 1px solid #fff;
 }
