--- a/src/app/components/main/components/Modal/modal.css
+++ b/src/app/components/main/components/Modal/modal.css
@@ -22,8 +22,10 @@
 
   @media (min-width: 435px) {
     width: 100%;
-    height: 100vh;
-    margin: 24px;
+    height: 100%;
+    margin-top: 24px;
+    margin-left: 96px;
+    margin-right: 96px;
   }
 }
 
