--- a/src/app/components/main/components/Card/card.css
+++ b/src/app/components/main/components/Card/card.css
@@ -1,48 +1,51 @@
-.card-image-container {
-    border-radius: 10px;
-    width: 180px;
-    height: 112.50px;
-    object-fit: fill;
-    overflow: hidden;
-    cursor: pointer;
-
-    @media(min-width: 768px){
-        width: 300px;
-        height: 168.75px;
-    }
-
+.card-container {
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 0 0 0.5px #585858;
+  border-radius: 10px;
 }
+
 .card-image {
-    width: 100%;
-    height: 100%;   
+  border-radius: 10px;
+  width: 180px;
+  height: 112.5px;
+  object-fit: fill;
+  overflow: hidden;
+  cursor: pointer;
+
+  @media (min-width: 768px) {
+    width: 300px;
+    height: 168.75px;
+  }
 }
 
 .card-details {
-    margin-top: 8px;
+  margin-top: 8px;
 }
 
 .card-item p {
-    font-size: .9rem;
-    font-weight: 700;
+  font-size: 0.9rem;
+  font-weight: 700;
+  margin-bottom: 0.5rem;
 }
 
 .preview-image {
-    overflow: hidden;
-    border-radius: 10px;
+  overflow: hidden;
+  border-radius: 10px;
 }
 
 .preview-title {
-    margin: 16px 0;
-    font-size: 1.2rem;
-    font-weight: 700;
+  margin: 16px 0;
+  font-size: 1.2rem;
+  font-weight: 700;
 }
 
 .preview-details {
-    padding: 16px;
-    background-color: #141414;
-    border-radius: 10px;
+  padding: 16px;
+  background-color: #141414;
+  border-radius: 10px;
 }
 
 .text-preview {
-    font-size: 1rem;
+  font-size: 1rem;
 }
