--- a/src/app/components/main/main.css
+++ b/src/app/components/main/main.css
@@ -1,10 +1,13 @@
 .main-container {
-    padding: 24px 0;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 8px;
-    color: #fff;
-    font-size: .8rem;
-    height: 100vh;     
-} 
+  height: 100vh;
+}
+
+.cards-container {
+  padding: 24px 0;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 8px;
+  color: #fff;
+  font-size: 0.8rem;
+}
