feat: refactor api request and add skeleton loading

--- a/src/app/home.css
+++ b/src/app/home.css
@@ -1,7 +1,5 @@
-.home-container {
-}
-
 .main {
-    padding-top: 56px;
-    background-color: #000;   
+    padding-top: 74px;
+    background-color: #000;  
+    height: 100vh;
 }
