--- a/src/app/components/main/components/Card/card.css
+++ b/src/app/components/main/components/Card/card.css
@@ -1,8 +1,12 @@
 .card-container {
   display: flex;
   flex-direction: column;
-  box-shadow: 0 0 0 0.5px #585858;
-  border-radius: 10px;
+  //transition: all 0.7s ease-in-out;
+}
+
+.card-container:hover {
+  //scale: 1.04;
+  //transition: all 0.7s ease-in-out;
 }
 
 .card-image {
@@ -12,6 +16,7 @@
   object-fit: fill;
   overflow: hidden;
   cursor: pointer;
+
 
   @media (min-width: 768px) {
     width: 300px;
