--- a/src/app/components/main/main.css
+++ b/src/app/components/main/main.css
@@ -1,7 +1,3 @@
-.main-container {
-  height: 100vh;
-}
-
 .cards-container {
   padding: 24px 0;
   display: flex;
@@ -10,4 +6,37 @@
   gap: 8px;
   color: #fff;
   font-size: 0.8rem;
+}
+
+.sketelon-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 8px;
+  margin: 0 24px;
+  padding: 24px 0;
+}
+
+.skeleton-image {
+  width: 180px;
+  height: 112.5px;
+  border-radius: 10px;
+  margin-bottom: 8px;
+  background-color: #292929;
+
+  @media (min-width: 768px) {
+    width: 300px;
+    height: 168.75px;
+  }
+}
+
+.skeleton-detail {
+  height: 4px;
+  width: 180px;
+  background-color: #292929;
+
+  @media (min-width: 768px) {
+    width: 250px;
+    height: 8px;
+  }
 }
