--- a/src/app/components/main/components/Card/card.css
+++ b/src/app/components/main/components/Card/card.css
@@ -17,7 +17,6 @@
   overflow: hidden;
   cursor: pointer;
 
-
   @media (min-width: 768px) {
     width: 300px;
     height: 168.75px;
@@ -48,6 +47,9 @@
   padding: 16px;
   background-color: #141414;
   border-radius: 10px;
+  width: 100%;
+  height: 100%;
+  //clip-path: path("M 0 120 C 40 120 81 124 114 105 C 154 83 166 82 203 82 T 400 80 L 400 200 L 0 200 Z");
 }
 
 .text-preview {
