--- a/src/app/components/header/header.css
+++ b/src/app/components/header/header.css
@@ -1,4 +1,4 @@
-.header-container {
+.header {
     position: fixed;
     top: 0; 
     left: 0;
@@ -11,19 +11,18 @@
     z-index: 20;
 }
 
-.header-logo img{
+.header__logo img{
     width: 130px;
 }
 
-
-.image-user-container{
+.user{
     width: 50px;
     height: 50px;
     border-radius: 50%;
     overflow: hidden;
 }
 
-.image-user {
+.user__image {
     width: 100%;
     height: 100%;
 }
