--- a/src/app/components/main/components/Card/card.css
+++ b/src/app/components/main/components/Card/card.css
@@ -1,19 +1,16 @@
-.card-container {
+.card-gallery {
   display: flex;
   flex-direction: column;
-  //transition: all 0.7s ease-in-out;
+  width: 180px;
+  @media (min-width: 768px) {
+    width: 300px;
+  }
 }
 
-.card-container:hover {
-  //scale: 1.04;
-  //transition: all 0.7s ease-in-out;
-}
-
-.card-image {
+.card-gallery__image {
   border-radius: 10px;
   width: 180px;
   height: 112.5px;
-  object-fit: fill;
   overflow: hidden;
   cursor: pointer;
 
@@ -23,27 +20,29 @@
   }
 }
 
-.card-details {
+.card-gallery__image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.card-gallery__title {
   margin: 8px;
 }
 
-.card-item p {
-  font-size: 0.9rem;
-  font-weight: 700;
-}
-
-.preview-image {
+.modal-gallery__image {
   overflow: hidden;
   border-radius: 10px;
 }
 
-.preview-title {
+.modal-gallery__title {
   margin: 16px 0;
   font-size: 1.2rem;
   font-weight: 700;
 }
 
-.preview-details {
+.modal-gallery__details {
   padding: 16px;
   background-color: #141414;
   border-radius: 10px;
@@ -52,6 +51,6 @@
   //clip-path: path("M 0 120 C 40 120 81 124 114 105 C 154 83 166 82 203 82 T 400 80 L 400 200 L 0 200 Z");
 }
 
-.text-preview {
+.modal-gallery_label {
   font-size: 1rem;
 }
