--- a/src/app/components/main/components/Card/card.css
+++ b/src/app/components/main/components/Card/card.css
@@ -31,6 +31,11 @@
   margin: 8px;
 }
 
+.card-gallery__title p {
+  color: #aaa;
+  font-size: 12px;
+}
+
 .modal-gallery__image {
   overflow: hidden;
   border-radius: 10px;
