--- a/src/app/pages/posts/[id]/post.css
+++ b/src/app/pages/posts/[id]/post.css
@@ -12,31 +12,54 @@
 
 .article__content {
   background-color: #242424;
- 
+
   width: 100%;
   color: #dfdfdf;
   display: flex;
   flex-direction: column;
   padding: 16px;
-  
 
   @media (min-width: 1024px) {
-    width: 1024px;
-    padding: 32px;
+    width: 768px;
+    padding: 16px;
   }
 }
 
 .article__content h2 {
-  font-size: 32px;
-  font-weight: bold;
+  font-size: 1.8rem; /* 28px */
+  font-weight: 600;
+  margin: 8px 0;
 }
 
 .article__content h3 {
-  font-size: 20px;
-  font-weight: bold;
+  font-size: 1.5rem; /* 24px */
+  font-weight: 600;
+  margin: 8px 0;
 }
 
-.article__content p {
-    font-size: 18px;
-    margin-bottom: 16px
+.article__content h4 {
+  font-size: 1.25rem; /* 20px */
+  font-weight: 600;
+  margin: 8px 0;
+}
+
+.article__content ul {
+  list-style: disc;
+  padding: 0 50px;
+}
+
+.article__content p li {
+  font-size: 1.125rem; /* 18px */
+  font-weight: 400;
+  line-height: 1.6;
+}
+
+.article__content hr {
+  margin: 16px 0;
+  border: 0;
+  height: 1px;
+  background-color: #3d3e3e;
+}
+.article__content img {
+  margin: 16px 0;
 }
