--- a/src/app/components/magazine/components/bento.css
+++ b/src/app/components/magazine/components/bento.css
@@ -1,26 +1,31 @@
 .magazine-bento {
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   grid-auto-rows: 15rem;
   gap: 4px;
 
   @media (min-width: 768px) {
     grid-template-columns: repeat(12, 1fr);
-    grid-auto-rows: 15rem;
   }
 }
 
 .magazine-bento__item:first-child {
-  grid-column: span 2;
+  grid-column: span 4;
+  font-size: 17px;
 
   @media (min-width: 768px) {
     grid-column: span 4;
   }
 }
 
-.magazine-bento__item {
+.magazine-bento__item {  
   grid-column: span 2;
+  font-size: 13px;
+
+  @media (min-width: 768px) {
+    font-size: 17px;
+  }
 }
 
 .magazine-skeleton__bento:first-child {
