--- a/src/app/components/magazine/magazine.css
+++ b/src/app/components/magazine/magazine.css
@@ -1,6 +1,10 @@
 .magazine {
   color: white;
-  padding: 24px;
+  padding: 8px;
   background-color: #242424;
+
+  @media (min-width: 768px) {
+    padding: 24px;
+  }
 }
 
