--- a/src/app/pages/contact/contact.css
+++ b/src/app/pages/contact/contact.css
@@ -5,12 +5,12 @@
   align-items: center;
 
   @media (min-width: 768px) {
-    height: 100%;
+    height: 78vh;
   }
 }
 
 .contact-content {
-  margin-top: 74px;
+  margin-top: 76px;
   color: #dfdfdf;
 
   @media (min-width: 1024px) {
