--- a/src/app/components/main/components/Card/card.css
+++ b/src/app/components/main/components/Card/card.css
@@ -36,26 +36,41 @@
   font-size: 12px;
 }
 
-.modal-gallery__image {
+.modal-photopreview__image {
   overflow: hidden;
   border-radius: 10px;
+  display: flex;
+  justify-content: center;
 }
 
-.modal-gallery__title {
+.modal-photopreview__image img {
+  width: auto;
+  height: 90vh;
+}
+
+.modal-photopreview__title {
   margin: 16px 0;
   font-size: 1.2rem;
   font-weight: 700;
 }
 
-.modal-gallery__details {
+.modal-photopreview__details {
   padding: 16px;
   background-color: #141414;
   border-radius: 10px;
   width: 100%;
   height: 100%;
+
+  display: flex;
+  justify-content: space-between;
   //clip-path: path("M 0 120 C 40 120 81 124 114 105 C 154 83 166 82 203 82 T 400 80 L 400 200 L 0 200 Z");
 }
 
-.modal-gallery_label {
+.modal-photopreview_label {
   font-size: 1rem;
+}
+
+.modal-photopreview_company-service {
+  font-size: 1.2rem;
+  text-style: cursive;
 }
