--- a/src/app/components/main/components/Card/card.css
+++ b/src/app/components/main/components/Card/card.css
@@ -51,7 +51,6 @@
     width: auto;
     height: 90vh;
   }
-
 }
 
 .modal-photopreview__title {
@@ -67,8 +66,12 @@
   width: 100%;
   height: 100%;
 
-  display: flex;
-  justify-content: space-between;
+  @media (min-width: 768px) {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  
   //clip-path: path("M 0 120 C 40 120 81 124 114 105 C 154 83 166 82 203 82 T 400 80 L 400 200 L 0 200 Z");
 }
 
@@ -77,6 +80,19 @@
 }
 
 .modal-photopreview_company-service {
-  font-size: 0.9 rem;
-  text-style: cursive;
+  margin-top: 8px;
+
+  @media (min-width: 768px) {
+    margin-top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+.modal-photopreview_company-service p{
+  text-align: center;
+  font-size: 1rem;
+
+
 }
