--- a/src/app/components/hero/hero.css
+++ b/src/app/components/hero/hero.css
@@ -1,75 +1,31 @@
-.hero-superposition-container {
-  position: relative;
-
-  @media (min-width: 768px) {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-  }
+.slider {
 }
 
-.hero-title {
-  color: #fff;
-  margin: 0 16px;
-  position: absolute;
-  top: 15%;
-
-  @media (min-width: 768px) {
-    top: 40%;
-    left: 10%;
-  }
+.slider-container {
+  display: grid;
+  grid-template-columns: repeat(3, 100%);
+  overflow: hidden;
 }
 
-.hero-title h1 {
-  font-size: 45px;
-  font-weight: bold;
-  line-height: 1.1;
-}
-
-.hero-title h2 {
-  color: #e5e7eb;
-  font-size: 25px;
-}
-
-.hero-title p {
-  color: #a1a0ab;
-  margin: 16px 0;
-  font-size: 22px;
-}
-
-.hero-image-container {
-  grid-column: 2;
-
-  mask-image: radial-gradient(
-    circle,
-    rgba(0, 0, 0, 1) 40%,
-    rgba(0, 0, 0, 0) 76%
-  );
-  -webkit-mask-image: radial-gradient(
-    circle,
-    rgba(0, 0, 0, 1) 40%,
-    rgba(0, 0, 0, 0) 76%
-  );
-  mask-repeat: no-repeat;
-  mask-size: cover;
-  opacity: 0.5;
+.slider-image_container{
   width: 100%;
-
-  @media (min-width: 1280px) {
-    width: 800px;
-  }
-}
-
-.hero-image {
-  display: none;
+  height: 100vh;
+  aspect-ratio: 16/9;
 
   @media (min-width: 768px) {
-    display: block;
-    object-fit: cover;
+    height: auto;
   }
 }
 
-.hero-image-right {
-  @media (min-width: 768px) {
-    display: none;
-  }
+.slide { 
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+
+  mask-image: linear-gradient(
+    to bottom,
+    black 50%,
+    transparent 100%
+  );
 }
+
