--- a/src/app/components/hero/hero.css
+++ b/src/app/components/hero/hero.css
@@ -7,7 +7,7 @@
   overflow: hidden;
 }
 
-.slider-image_container{
+.slider-image_container {
   width: 100%;
   height: 100vh;
   aspect-ratio: 16/9;
@@ -17,15 +17,81 @@
   }
 }
 
-.slide { 
+.slide-translation-0 {
+  transform: translateX(0%);
+}
+
+.slide-translation-1 {
+  transform: translateX(-100%);
+}
+
+.slide-translation-2 {
+  transform: translateX(-200%);
+}
+
+.slide {
   width: 100%;
   height: 100%;
   object-fit: cover;
 
-  mask-image: linear-gradient(
-    to bottom,
-    black 50%,
-    transparent 100%
-  );
+  mask-image: linear-gradient(to bottom, black 20%, transparent 100%);
 }
 
+.slide-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  //background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 0 20px;
+  font-size: 30px;
+}
+
+.slide-overlay {
+  h1 {
+    font-size: 15px;
+  }
+  h2 {
+    font-size: 30px;
+  }
+  p {
+    font-size: 20px;
+  }
+
+  @media (min-width: 768px) {
+    h1 {
+      font-size: 20px;
+    }
+    h2 {
+      font-size: 50px;
+    }
+    p {
+      font-size: 30px;
+    }
+  }
+}
+
+.line {
+  height: 2px; /* Ajusta el grosor de la línea */
+  width: 200px; /* O establece un ancho específico */
+  background-color: transparent; /* Si deseas que sea invisible */
+  box-shadow: 0 1px 1px rgba(255, 255, 255, 1);
+  margin: 16px 0;
+}
+
+.slide-overlay-info {
+  display: flex;
+  gap: 8px;
+  margin-bottom: 8px;
+
+  p {
+    font-size: 10px;
+  }
+}
