--- a/src/app/components/hero/components/sliderItem.css
+++ b/src/app/components/hero/components/sliderItem.css
@@ -10,6 +10,10 @@
   transform: translateX(-200%);
 }
 
+.slide-translation-3 {
+  transform: translateX(-300%);
+}
+
 .slide {
   width: 100%;
   height: 100%;
