fix: hiden copies when the field is empty

--- a/src/app/pages/upload/page.css
+++ b/src/app/pages/upload/page.css
@@ -18,6 +18,7 @@
         grid-template-columns: repeat(4, 1fr);
     }
     @media (min-width: 1280px) {
+        grid-template-columns: repeat(8, 1fr);
     }
 }
 
