--- a/src/app/components/gallery/gallery.css
+++ b/src/app/components/gallery/gallery.css
@@ -1,9 +1,17 @@
-.cards-container {
-    padding: 24px 0;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 8px;
-    color: #fff;
-    font-size: 0.8rem;
+.gallery-container {
+  color: #fff;
+  margin: 0 8px;
+
+  @media(min-width: 768px) {
+    margin: 0 24px;
   }
+}
+
+.cards-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 8px;
+  color: #fff;
+  font-size: 0.8rem;
+}
