--- a/src/app/components/gallery/components/tabsCategories.css
+++ b/src/app/components/gallery/components/tabsCategories.css
@@ -2,6 +2,12 @@
     margin-bottom: 16px;
     display: flex;
     gap: 16px;
-    overflow: hidden;
-    whithe-space: nowrap;
+
+    overflow-x: auto;
+    overflow-y: hidden;
+    white-space: nowrap;
+    
+    /* Ocultar scrollbar pero mantener funcionalidad */
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; 
 }
