feat: add search for serial component

--- a/src/app/components/gallery/gallery.css
+++ b/src/app/components/gallery/gallery.css
@@ -7,6 +7,16 @@
   }
 }
 
+.galley-controls {
+
+  @media(min-width: 768px) {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 16px;
+  }
+}
+
 .cards-container {
   display: flex;
   justify-content: center;
