--- a/src/app/components/hero/components/sliderItem.css
+++ b/src/app/components/hero/components/sliderItem.css
@@ -14,6 +14,14 @@
   transform: translateX(-300%);
 }
 
+.slide-translation-4 {
+  transform: translateX(-400%);
+}
+
+.slide-translation-5 {
+  transform: translateX(-500%);
+}
+
 .slide {
   width: 100%;
   height: 100%;
