--- a/app/globals.css
+++ b/app/globals.css
@@ -22,7 +22,7 @@
 
   --post-font-content: Inter, sans-serif;
 
-  --padding-container-mobile: 1rem;
+  --padding-container-mobile: 16px;
   --margin-container-mobile: 8px;
   --padding-container-desktop: 16px;
   --margin-container-desktop: 16px;
