--- a/app/posts/[id]/componentes/paragraph/paragraph.css
+++ b/app/posts/[id]/componentes/paragraph/paragraph.css
@@ -1,9 +1,11 @@
 .post-content-principal-p {
-    font-family: var(--post-font-content);
-    font-weight: 500;
-  }
-  
-  .post-content-p {
-    font-family: var(--post-font-content);
-    line-height: 1.625;
-  }
+  font-family: var(--post-font-content);
+  font-weight: 500;
+  margin-block: lh;
+}
+
+.post-content-p {
+  font-family: var(--post-font-content);
+  line-height: 1.625;
+  margin-block: lh;
+}
