--- a/app/posts/[id]/componentes/header/header.css
+++ b/app/posts/[id]/componentes/header/header.css
@@ -5,6 +5,7 @@
   font-size: var(--post-text-content-size-mobile);
 
   @media (min-width: 768px) {
+    gap: 16px;
     font-size: var(--post-text-content-size);
   }
 }
@@ -13,6 +14,11 @@
   display: flex;
   place-items: center;
   gap: var(--margin-container-mobile);
+}
+
+.post-header_items span:first-child {
+  font-weight: 700;
+  color: var(--tertiary-color);
 }
 
 .post-header_icons {
