--- a/app/posts/[id]/componentes/image/image.css
+++ b/app/posts/[id]/componentes/image/image.css
@@ -27,12 +27,13 @@
 }
 
 .post-image_author {
+  position: relative;
   margin: var(--margin-container-mobile);
   font-size: var(--post-text-content-size-mobile);
   font-family: var(--post-font-content);
 }
 
-.post-image_author:before {
+.post-image-author-text:before {
   content: "";
   position: absolute;
   display: inline-block;
@@ -40,8 +41,10 @@
   width: 18px;
   border-left: 1px solid var(--primary-color);
   border-bottom: 1px solid var(--primary-color);
-  left: 16px;
+  left: 0px;
 }
+
+
 
 .post-image-author-text {
   margin-left: 24px;
