--- a/app/posts/[id]/componentes/author/author.css
+++ b/app/posts/[id]/componentes/author/author.css
@@ -12,9 +12,15 @@
   .post-author_text {
     margin: var(--margin-container-mobile);
     font-size: var(--post-text-content-size-mobile);
+    
   
     @media (min-width: 768px) {
       margin: var(--margin-container-desktop);
       font-size: var(--post-text-content-size);
     }
+  }
+  
+  .post-author_text span {
+    font-weight: 700;
+    color: rgb(155 135 245 / 0.9);
   }
