--- a/app/posts/[id]/componentes/header/header.css
+++ b/app/posts/[id]/componentes/header/header.css
@@ -1,10 +1,12 @@
 .post-header {
   display: flex;
+  justify-content: space-between;
   gap: 8px;
   font-family: var(--post-font-content);
   font-size: var(--post-text-content-size-mobile);
 
   @media (min-width: 768px) {
+    justify-content: flex-start;
     gap: 16px;
     font-size: var(--post-text-content-size);
   }
