--- a/app/posts/[id]/post.css
+++ b/app/posts/[id]/post.css
@@ -5,8 +5,8 @@
 }
 
 .post-article {
-  max-width: 700px; /* ideal para lectura */
-  margin: 0 auto; /* centrado horizontal */
+  max-width: 768px; 
+  margin: 0 auto;
   line-height: 1.6;
   padding: 0 var(--padding-container-mobile);
 }
