--- a/app/main/components/Card/card.css
+++ b/app/main/components/Card/card.css
@@ -2,38 +2,35 @@
   display: flex;
   flex-direction: column;
   width: 180px;
+  position: relative;
   @media (min-width: 768px) {
     width: 300px;
   }
 }
 
-.card-gallery__image {
+.card-gallery_image {
   border-radius: 8px;
-  width: 180px;
-  height: 112.5px;
+  width: 100%;
+  aspect-ratio: 16 / 9;
   overflow: hidden;
   cursor: pointer;
-
-  @media (min-width: 768px) {
-    width: 300px;
-    height: 168.75px;
-  }
 }
 
-.card-gallery__image img {
+.card-gallery_image img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: center;
 }
 
-.card-gallery__title {
-  margin: 8px;
-}
-
-.card-gallery__title p {
-  color: #aaa;
-  font-size: 12px;
+.card-gallery_title {
+  position: absolute;
+  bottom: 0;
+  padding: 4px;
+  width: 100%;
+  font-weight: 700;
+  font-size: 0.8rem;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
 }
 
 .modal-photopreview__image {
@@ -77,7 +74,7 @@
   @media (min-width: 768px) {
     display: flex;
     justify-content: space-between;
-  }  
+  }
 }
 
 .modal-photopreview_label {
@@ -95,9 +92,7 @@
   }
 }
 
-.modal-photopreview_company-service p{
+.modal-photopreview_company-service p {
   text-align: center;
   font-size: 1rem;
-
-
 }
