--- a/app/main/components/Modal/Modal.module.css
+++ b/app/main/components/Modal/Modal.module.css
@@ -11,7 +11,7 @@
   z-index: 30;
 }
 
-.modal {
+.modal_container {
   box-shadow: 0 0 0 0.5px #585858;
   border-radius: 8px;
   background-color: #000;
@@ -29,7 +29,7 @@
   }
 }
 
-.close-button-container {
+.button {
   position: absolute;
   top: 20px;
   right: 20px;
@@ -40,7 +40,7 @@
   }
 }
 
-.close-button {
+.close_button {
   width: 24px;
   height: 24px;
   border-radius: 50%;
