--- a/app/main/components/gallery/components/categoryList/CategoryList.module.css
+++ b/app/main/components/gallery/components/categoryList/CategoryList.module.css
@@ -5,16 +5,24 @@
 .header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  margin-bottom: 8px;
 }
 
 .header span {
-  cursor: pointer;
-  color: #ffffff99;
+  cursor: pointer;  
 }
 
-.container h2 {
-  margin-bottom: 8px;
-  font-size: 1.2rem;
+.header span:first-child {
+  font-size: 1rem;
+}
+
+.header span:last-child {
+  font-size: 0.8rem;
+  color: #ffffff99;
+  border: 1px solid #ffffff;
+  border-radius: 50px;
+  padding: 2px 8px;
 }
 
 .carousel {
@@ -45,7 +53,7 @@
   left: 0;
   width: 100%;
   padding: 4px;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7));
 }
 
 .info p {
