--- a/app/main/components/gallery/components/imageCard/ImageCard.module.css
+++ b/app/main/components/gallery/components/imageCard/ImageCard.module.css
@@ -33,16 +33,13 @@
 
 .title {
   position: absolute;
-  padding: 4px;
   bottom: 0;
   width: 100%;
-  font-weight: 700;
-  font-size: 0.8rem;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
-
-  @media (min-width: 768px) {
-    padding: 8px;
-    font-size: 1rem;
-  }
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7));
+  padding: 8px;
 }
 
+.title h2 {
+  font-weight: 600;
+  font-size: 0.9rem;
+}
