--- a/app/main/components/hero/components/SliderItem.module.css
+++ b/app/main/components/hero/components/SliderItem.module.css
@@ -29,10 +29,14 @@
 .slide {
   width: 100%;
   height: 100%;
-  object-fit: cover;
-  aspect-ratio: 16/9;
 
-  mask-image: linear-gradient(to bottom, black 20%, transparent 100%);
+  mask-image: linear-gradient(to bottom, black 70%, transparent 100%);
+}
+
+.slide img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .overlay {
@@ -57,30 +61,12 @@
   }
 }
 
-.slide-overlay {
-  h1 {
-    font-size: 15px;
-  }
-  h2 {
-    font-size: 30px;
-  }
-
-  p {
-    font-size: 15px;
-  }
-
-  @media (min-width: 768px) {
-    h1 {
-      font-size: 20px;
-    }
-    h2 {
-      font-size: 50px;
-    }
-    p {
-      font-size: 20px;
-    }
+.overlay {
+  span {
+    font-size: 8px;
   }
 }
+
 
 .line {
   height: 2px;
