styles: refactor skeleton styles

--- a/app/main/components/gallery/components/lastPhotos/LastPhotos.module.css
+++ b/app/main/components/gallery/components/lastPhotos/LastPhotos.module.css
@@ -1,4 +1,4 @@
-.contianer {
+.container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -6,6 +6,7 @@
 
 .container h3 {
   margin-bottom: 8px;
+  color: #fff;
 }
 
 .carousel {
