--- a/app/main/components/gallery/components/categoryList/CategoryList.module.css
+++ b/app/main/components/gallery/components/categoryList/CategoryList.module.css
@@ -1,5 +1,6 @@
 .container {
   margin-bottom: 16px;
+  color: #fff;
 }
 
 .header {
@@ -19,8 +20,8 @@
 
 .header span:last-child {
   font-size: 0.8rem;
-  color: #ffffff99;
-  border: 1px solid #ffffff99;
+  color: #aaaaaa;
+  border: 1px solid #ffffff;
   border-radius: 50px;
   padding: 2px 8px;
 }
@@ -31,7 +32,7 @@
   overflow-x: auto;
   overflow-y: hidden;
   white-space: nowrap;
-  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  -ms-overflow-style: none; 
   scrollbar-width: none; 
 }
 
