--- a/components/loader/loader-intro.css
+++ b/components/loader/loader-intro.css
@@ -1,26 +1,19 @@
 .loader-intro_container {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  animation: apperar-disapear 3s ease-in-out infinite;
+  animation: appear-disappear 3s ease-in-out infinite;
 
   h1 {
-    font-size: 30px;
+    font-size: 20px;
     color: white;
-  }
-
-  @media (min-width: 768px) {
-    h1 {
-      font-size: 50px;
-      color: white;
-    }
   }
 }
 
-@keyframes apperar-disapear {
+@keyframes appear-disappear {
   0% {
     opacity: 0;
   }
@@ -33,9 +26,6 @@
 }
 
 .abc-logo {
-  width: 100px;
-
-  @media (min-width: 768px) {
-    width: 200px;
-  }
+  width: 50px;
+  margin: 0 auto;
 }
