--- a/components/header/Header.module.css
+++ b/components/header/Header.module.css
@@ -1,12 +1,22 @@
 .container {
-  position: fixed;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
 }
+
 .container_menu {
   display: flex;
   justify-content: space-between;
   align-items: center;
   color: #fff;
   padding: 0 16px;
+  background-color: rgba(0, 0, 0);
+
+  @media (min-width: 768px) {
+    padding: 0 16px;
+    backdrop-filter: blur(5px);
+    background-color: rgba(0, 0, 0, 0.1);
+  }
 }
 
 .menu_mobile {
