--- a/app/main/components/hero/Hero.module.css
+++ b/app/main/components/hero/Hero.module.css
@@ -10,21 +10,42 @@
   top: 0;
   overflow: hidden;
   align-items: center;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .hero_images {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: 19rem;
-  height: 100vh;
+  grid-template-rows: auto;
+  grid-auto-columns: auto;
+  grid-auto-rows: auto;
+
   gap: 8px;
+  box-sizing: border-box;
+  min-height: 100px;
+  width: 100%;
+  height: 100%;
   transform: translate3d(0px, 0px, 0px) scale3d(3.2, 3.2, 1) rotateX(0deg)
     rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
+}
+
+.item {
+  width: 100%;
+  height: 270px;
+
+  @media (min-width: 1280px) {
+    height: 200px;
+  }
+
+  @media (min-width: 1440px) {
+    height: 310px;
+  }
 }
 
 .image {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: center;
+  object-position: center center;
 }
