--- a/app/main/components/hero/components/slider/Slider.module.css
+++ b/app/main/components/hero/components/slider/Slider.module.css
@@ -1,6 +1,5 @@
 .container {
   display: grid;
   grid-template-columns: repeat(3, 100%);
-  grid-auto-rows: 19rem;
-  overflow: hidden;
+  height: 100%;
 }
