--- a/app/main/components/hero/Hero.module.css
+++ b/app/main/components/hero/Hero.module.css
@@ -28,11 +28,13 @@
   height: 100%;
   transform: translate3d(0px, 0px, 0px) scale3d(3.2, 3.2, 1) rotateX(0deg)
     rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
+
 }
 
 .item {
   width: 100%;
   height: 270px;
+ 
 
   @media (min-width: 1280px) {
     height: 200px;
@@ -47,5 +49,5 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: center center;
+  object-position: center; 
 }
