--- a/app/main/components/hero/components/sliderItem/SliderItem.module.css
+++ b/app/main/components/hero/components/sliderItem/SliderItem.module.css
@@ -55,8 +55,8 @@
   color: white;
   text-align: left;
   width: 35rem;
-  padding-left: 2%;
-  padding-right: 2%;
+  padding-left: 5%;
+  padding-bottom: 10%;
   flex-flow: column;
   justify-content: flex-end;
   align-items: stretch;
