--- a/app/main/components/hero/components/sliderItem/SliderItem.module.css
+++ b/app/main/components/hero/components/sliderItem/SliderItem.module.css
@@ -69,6 +69,10 @@
   margin-bottom: 1.8rem;
   color: white;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
-  font-size: 1.5rem;
+  font-size: 1rem;
   font-weight: bold;
+
+  @media (min-width: 1440px) {
+    font-size: 1.5rem;
+  }
 }
