--- a/app/main/components/hero/Hero.module.css
+++ b/app/main/components/hero/Hero.module.css
@@ -26,6 +26,7 @@
   min-height: 100px;
   width: 100%;
   height: 100%;
+  will-change: transform;
   transform: translate3d(0px, 0px, 0px) scale3d(3.2, 3.2, 1) rotateX(0deg)
     rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
 
