--- a/app/main/components/gallery/components/categoryList/CategoryList.module.css
+++ b/app/main/components/gallery/components/categoryList/CategoryList.module.css
@@ -1,5 +1,4 @@
 .container {
-  margin-bottom: 16px;
   color: #fff;
 }
 
@@ -7,66 +6,84 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.header h3 {
   margin-bottom: 8px;
+  margin-left: 4px;
+  color: #fff;
+
+  @media (min-width: 768px) {
+    margin-left: 16px;
+    margin-bottom: 8px;
+    font-size: 28px;
+  }
 }
 
-.header span {
-  cursor: pointer;  
+.arrows_controls {
+  position: relative;
+
+  @media (min-width: 768px) {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
-.header span:first-child {
-  font-size: 1rem;
+.arrows_controls button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  display: none;
+
+  @media (min-width: 768px) {
+    position: absolute;
+    border-radius: 50%;
+    top: 40%;
+    color: #fff;
+    padding: 8px;
+    display: block;
+    background: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+  }
 }
 
-.header span:last-child {
-  font-size: 0.8rem;
-  color: #aaaaaa;
-  border: 1px solid #ffffff;
-  border-radius: 50px;
-  padding: 2px 8px;
+.arrows_controls:hover button {
+  opacity: 1;
+}
+
+.arrow_left {
+  left: 0;
+}
+
+.arrow_right {
+  right: 0;
 }
 
 .carousel {
   display: flex;
   gap: 8px;
+  margin-bottom: 8px;
   overflow-x: auto;
   overflow-y: hidden;
   white-space: nowrap;
-  -ms-overflow-style: none; 
-  scrollbar-width: none; 
-}
-
-.carousel::-webkit-scrollbar {
-    display: none;
+  -webkit-overflow-scrolling: touch;
+  scrollbar-width: none;
 }
 
 .slide {
+  width: 95%;
   scroll-snap-align: start;
   flex-shrink: 0;
-  position: relative;
+
+  @media (min-width: 768px) {
+    width: 320px;
+    height: 200px;
+  }
 }
 
 .image {
-  width: 170px;
-  aspect-ratio: 4/3;
+  aspect-ratio: 16/9;
   object-fit: cover;
   border-radius: 10px;
 }
-
-.info {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  padding: 4px;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7));
-}
-
-.info p {
-  font-weight: 700;
-  font-size: 0.8rem;
-  text-wrap: auto;
-}
-
-
-
