--- a/app/main/components/gallery/components/lastPhotos/LastPhotos.module.css
+++ b/app/main/components/gallery/components/lastPhotos/LastPhotos.module.css
@@ -6,7 +6,54 @@
 
 .container h3 {
   margin-bottom: 8px;
+  margin-left: 4px;
   color: #fff;
+
+  @media (min-width: 768px) {
+    margin-left: 16px;
+    margin-bottom: 8px;
+    font-size: 1.25rem;
+  }
+}
+
+.arrows_controls {
+  position: relative;
+
+  @media (min-width: 768px) {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+.arrows_controls button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  display: none;
+
+  @media (min-width: 768px) {
+    position: absolute;
+    border-radius: 50%;
+    top: 40%;
+    color: #fff;
+    padding: 8px;
+    display: block;
+    background: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+  }
+}
+
+.arrows_controls:hover button {
+  opacity: 1;
+}
+
+.arrow_left {
+  left: 0;
+}
+
+.arrow_right {
+  right: 0;
 }
 
 .carousel {
@@ -17,13 +64,22 @@
   overflow-y: hidden;
   white-space: nowrap;
   -webkit-overflow-scrolling: touch;
-  scrollbar-width: none; 
+  scrollbar-width: none;
+
+  @media (min-width: 768px) {
+    margin-bottom: 16px;
+  }
 }
 
 .slide {
   width: 95%;
   scroll-snap-align: start;
   flex-shrink: 0;
+
+  @media (min-width: 768px) {
+    width: 320px;
+    height: 200px;
+  }
 }
 
 .image {
