--- a/app/main/components/gallery/Gallery.module.css
+++ b/app/main/components/gallery/Gallery.module.css
@@ -1,6 +1,10 @@
 .container {
   color: #fff;
-  margin: 0 24px;
+  margin: 0 auto;
+
+  @media(min-width: 1280px) {
+    margin: 0 24px;
+  }
   
   @media(min-width: 1440px) {
     max-width: 1622px;
