--- a/app/main/components/gallery/components/categoryList/CategoryList.module.css
+++ b/app/main/components/gallery/components/categoryList/CategoryList.module.css
@@ -1,21 +1,23 @@
 .container {
   color: #fff;
+  margin: 0 4px;
 }
 
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin: 8px 4px;
+
+  @media (min-width: 768px) {
+    margin: 8px 16px;
+  }
 }
 
 .header h3 {
-  margin-bottom: 8px;
-  margin-left: 4px;
   color: #fff;
 
   @media (min-width: 768px) {
-    margin-left: 16px;
-    margin-bottom: 8px;
     font-size: 28px;
   }
 }
@@ -63,7 +65,6 @@
 .carousel {
   display: flex;
   gap: 8px;
-  margin-bottom: 8px;
   overflow-x: auto;
   overflow-y: hidden;
   white-space: nowrap;
@@ -72,13 +73,12 @@
 }
 
 .slide {
-  width: 95%;
+  width: 60%;
   scroll-snap-align: start;
   flex-shrink: 0;
 
   @media (min-width: 768px) {
     width: 320px;
-    height: 200px;
   }
 }
 
