--- a/app/main/components/gallery/components/lastPhotos/LastPhotos.module.css
+++ b/app/main/components/gallery/components/lastPhotos/LastPhotos.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin: 0 4px;
 }
 
 .container h3 {
@@ -78,7 +79,6 @@
 
   @media (min-width: 768px) {
     width: 320px;
-    height: 200px;
   }
 }
 
