feat: fix styles and add skeleton galley and update types

--- a/app/(routes)/category/[slug]/CategoryGallery.module.css
+++ b/app/(routes)/category/[slug]/CategoryGallery.module.css
@@ -30,10 +30,19 @@
 
 .list {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 2px;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 8px;
+
+  @media (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+  }
 }
 
 .pagination {
   margin: 16px 0;
 }
+
