--- a/components/galleryList/GalleryList.module.css
+++ b/components/galleryList/GalleryList.module.css
@@ -9,6 +9,7 @@
   width: 180px;
   object-fit: cover;
   object-position: center;
+  border-radius: 8px;
 
   @media (min-width: 768px) {
     width: 300px;
