--- a/app/(routes)/transport-category/[slug]/CategoryGallery.module.css
+++ b/app/(routes)/transport-category/[slug]/CategoryGallery.module.css
@@ -6,27 +6,56 @@
   color: #fff;
 }
 
-.header_title {
-  color: #f8fafc;
-  font-size: 2.75rem;
-  font-weight: 700;
-  margin-bottom: 1rem;
-  text-shadow: 0 4px 8px rgba(255, 255, 255, 0.1);
-  letter-spacing: -0.02em;
-  line-height: 1.1;
+.header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  background-color: #000;
+  padding: 16px;
+  width: 100%;
+  margin-bottom: 16px;
+
+  @media (min-width: 768px) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    place-content: center;
+    gap: 24px;
+  }
 }
 
-.header_description {
-  color: #f1f5f9;
-  font-size: 1.25rem;
-  line-height: 1.7;
-  max-width: 1200px;
-  margin-bottom: 3rem;
-  background-color: #262626;
-  padding: 2rem;
-  border-radius: 16px;
-  border: 1px solid #404040;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+.title {
+  font-size: 2.25rem;       
+  font-weight: 700;           
+  color: white;               
+  line-height: 1.25; 
+  text-align: center; 
+
+  @media (min-width: 768px) {
+    font-size: 3rem;          
+  }
+
+  @media (min-width: 1024px) {
+    font-size: 3.75rem;     
+  }
+}
+
+.title span {
+  color: var(--primary-color);
+}
+
+.description {
+  font-size: 1.125rem;       
+  color: #D1D5DB;       
+  max-width: 42rem;          
+  margin-left: auto;         
+  margin-right: auto;
+  line-height: 1.625;
+
+  @media (min-width: 768px) {
+    font-size: 1.25rem;
+  }
 }
 
 .list {
@@ -46,28 +75,3 @@
 .pagination {
   margin: 16px 0;
 }
-
-/* .header h2 {
-  font-size: 1.5rem;
-  font-weight: 600;
-  letter-spacing: -0.5px;
-  line-height: 1.2;
-  margin-bottom: 8px;
-}
-
-.header p {
-  font-size: 1rem;
-  font-weight: 400;
-  letter-spacing: -0.5px;
-  line-height: 1.2;
-}
-
-.header_description {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  padding: 16px;
-  border-radius: 8px;
-  background-color: #303030;
-} */
