feat: fix styles and add collapse in category description

--- a/app/(routes)/transport-category/[slug]/CategoryGallery.module.css
+++ b/app/(routes)/transport-category/[slug]/CategoryGallery.module.css
@@ -25,7 +25,7 @@
 }
 
 .title {
-  font-size: 1.125rem;      
+  font-size: 1.7rem;      
   font-weight: 700;              
   line-height: 1.25; 
   text-align: left; 
@@ -45,7 +45,7 @@
 }
 
 .description {
-  font-size: 1.125rem;       
+  font-size: .9rem;       
   color: #D1D5DB;       
   max-width: 42rem;          
   margin-left: auto;         
