--- a/app/(routes)/transport-category/[slug]/CategoryGallery.module.css
+++ b/app/(routes)/transport-category/[slug]/CategoryGallery.module.css
@@ -25,18 +25,18 @@
 }
 
 .title {
-  font-size: 1.7rem;      
-  font-weight: 700;              
-  line-height: 1.25; 
-  text-align: left; 
-  
+  font-size: 1.7rem;
+  font-weight: 700;
+  line-height: 1.25;
+  text-align: left;
+
   @media (min-width: 768px) {
-    text-align: center; 
-    font-size: 3rem;          
+    text-align: center;
+    font-size: 3rem;
   }
 
   @media (min-width: 1024px) {
-    font-size: 3.75rem;     
+    font-size: 3.75rem;
   }
 }
 
@@ -45,10 +45,10 @@
 }
 
 .description {
-  font-size: .9rem;       
-  color: #D1D5DB;       
-  max-width: 42rem;          
-  margin-left: auto;         
+  font-size: 0.9rem;
+  color: #d1d5db;
+  max-width: 42rem;
+  margin-left: auto;
   margin-right: auto;
   line-height: 1.625;
 
@@ -60,14 +60,11 @@
 .list {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 8px;
+  gap: 24px;
+  padding: 32px;
 
   @media (min-width: 768px) {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 16px;
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 
