fix: styles overlay and add home page icon

--- a/components/header/Header.module.css
+++ b/components/header/Header.module.css
@@ -20,6 +20,10 @@
 }
 
 .menu_mobile {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
   @media (min-width: 768px) {
     display: none;
   }
@@ -28,7 +32,7 @@
 .logo {
   width: 50px;
   height: 40px;
-  margin: 8px 0;
+  margin: 4px 0;
 
   @media (min-width: 768px) {
     display: none;
@@ -48,7 +52,6 @@
     display: none;
   }
 }
-
 .menu_desktop {
   @media (max-width: 768px) {
     display: none;
