--- a/app/(routes)/vehiculo/components/companies/CompanyLogo.module.css
+++ b/app/(routes)/vehiculo/components/companies/CompanyLogo.module.css
@@ -1,5 +1,5 @@
 .container {
-  width: 100%;
+  height: 150px;
   padding: 16px;
   grid-row: 1;
   grid-column: 1;
@@ -8,6 +8,7 @@
   justify-content: center;
 
   @media (min-width: 425px) {
+    justify-content: start;
     grid-column: 1/3;
     margin: 0;
     padding: 0;
@@ -15,15 +16,6 @@
 }
 
 .container img {
-  width: 60%;
   pointer-events: none;
   touch-action: none;
-
-  @media (min-width: 425px) {
-    width: 100%;
-  }
-}
-
-.logoHidden {
-  display: none;
 }
