--- a/app/(routes)/vehiculo/components/vehicleDetail/VehicleDetail.module.css
+++ b/app/(routes)/vehiculo/components/vehicleDetail/VehicleDetail.module.css
@@ -1,8 +1,9 @@
 .container {
-  padding: 8px 0;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: repeat(3, 1fr);
+  width: 100%;
+  gap: 4px;
 
   h2 {
     font-size: 13px;
@@ -10,22 +11,40 @@
     color: #dddad0;
     text-shadow: 0 0 10px #000;
   }
-  p {
+  span {
     font-size: 16px;
     font-weight: 600;
     color: #eeeeee;
     text-shadow: 0 0 10px #000;
   }
 }
+
+.brand {
+  grid-column: 2;
+  grid-row: 1/2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .plate {
   grid-column: 1;
-  grid-row: 1;
+  grid-row: 2;
+  align-self: center;
+  display: flex;
+  align-items: center;
+  gap: 8px;
 }
 .serial {
   grid-column: 2;
-  grid-row: 1;
+  grid-row: 2;
+  align-self: center;
+  display: flex;
+  align-items: center;
+  gap: 8px;
 }
 .service {
   grid-column: 1/3;
-  grid-row: 2;
+  grid-row: 3;
+  align-self: center;
 }
